codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__slash_popup_pro.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
"› /pro                                                      "
"                                                            "
"  /provider  switch between configured model providers      "
"  /profile   load, show, or clear a prompt profile /        "
"             character card                                 "
